<resources>
    <string name="app_name">Alfawallet</string>
    <string name="enter_e_mail">Введите e-mail</string>
    <string name="enter_password">Введите пароль</string>
    <string name="login">Войти</string>
    <string name="new_acc">или</string>
    <string name="create_account">Зарегистрироваться</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="logo">logo</string>
    <string name="e_mail">Адрес почты</string>
    <string name="password">Пароль</string>
    <string name="enter_valid_email">Введите e-mail в верном формате</string>
    <string name="wrong_email_or_pswd">Неправильный логин или пароль</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="not_equal_passwords">Пароли не совпадают</string>
    <string name="password_len">Введите пароль длиной от 8 до 16 символов</string>
    <string name="loading">Загрузка</string>
    <string name="place_e_mail">Укажите e-mail</string>
    <string name="we_will_send_you_code">Мы отправим Вам код для восстановления пароля</string>
    <string name="enter_code">Введите код подтверждения</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="my_cards">Мои карты</string>
    <string name="add_card">добавить карту</string>
    <string name="create_card">+</string>
    <string name="logout">logout</string>
    <string name="enter_shop_name">Введите название магазина</string>
    <string name="shop_name">Название магазина</string>
    <string name="scan_code">Сканировать код</string>
    <string name="create_card_text">Создать карту</string>
    <string name="read_code">Считанный код</string>
    <string name="refresh_cards">Обновить данные</string>

    <string name="pref_email_file_name">email_shared_prefs</string>
    <string name="pref_code_file_name">code_shared_prefs</string>
</resources>