<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RestorePasswordActivity"
    android:background="@color/grey">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/alfawallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:text="@string/place_e_mail"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:layout_marginTop="212dp"
        android:gravity="center"
        android:text="@string/we_will_send_you_code"
        android:textColor="@color/text_view_grey"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/restore_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="272dp"
        android:autofillHints="no"
        android:background="@drawable/edittext_background"
        android:drawableEnd="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/enter_e_mail"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/text_view_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/restore_code"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="340dp"
        android:autofillHints="no"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/enter_code"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/text_view_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text" />

    <EditText
        android:id="@+id/restore_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="404dp"
        android:autofillHints="no"
        android:background="@drawable/edittext_background"
        android:drawableEnd="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:visibility="invisible"
        android:textColorHint="@color/text_view_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/restore_confirm_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="468dp"
        android:autofillHints="no"
        android:background="@drawable/edittext_background"
        android:drawableEnd="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/text_view_grey"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/restore_password_button"
        android:layout_width="295dp"
        android:layout_height="60dp"
        android:layout_marginTop="572dp"
        android:backgroundTint="@color/red"
        android:text="@string/restore_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>